--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,25 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="is">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="description" content="Dr. Lagnir - Professional plumbing services in Iceland. Fast, reliable, and affordable solutions." />
+		<title>Dr. Lagnir - Professional Plumbing Services</title>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
-
 <style>
 	html,
 	body {
 		margin: 0;
 		width: 100%;
-		height: 100%;
 	}
 </style>
